...
        panel.add(JButton().also {
            it.action = object : AbstractAction() {
                override fun actionPerformed(e: ActionEvent?) {
                    defaultListModel.clear()
                }
            }
            it.text = "Clear"
        })
        panel.add(JLabel("Base file name"))
        val input = JOptionPane.showInputDialog(null, panel, "Files rename", JOptionPane.QUESTION_MESSAGE)
        if (input.isNullOrBlank() || defaultListModel.isEmpty) {
            return
        }
...
