...
                        items.add(
                            ContextMenuItem("Open") {
                                LinkBehaviorService().invoke(secondaryClickItem)
                            }
                        )
                        items.add(
                            ContextMenuItem("Open background") {
                                LinkBehaviorService().invoke(secondaryClickItem, true)
                            }
                        )
                    }

                    items
...
