package jp.toastkid.yobidashi4.presentation.web.history

import androidx.compose.foundation.lazy.LazyListState
import androidx.compose.ui.focus.FocusRequester
import androidx.compose.ui.input.key.Key
import androidx.compose.ui.test.ExperimentalTestApi
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.longClick
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.onParent
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performKeyInput
import androidx.compose.ui.test.performMouseInput
import androidx.compose.ui.test.pressKey
import androidx.compose.ui.test.v2.runDesktopComposeUiTest
import io.mockk.MockKAnnotations
import io.mockk.Runs
import io.mockk.coEvery
import io.mockk.every
import io.mockk.impl.annotations.RelaxedMockK
import io.mockk.just
import io.mockk.mockk
import io.mockk.mockkConstructor
import io.mockk.unmockkAll
import io.mockk.verify
import jp.toastkid.yobidashi4.domain.model.web.history.WebHistory
import jp.toastkid.yobidashi4.domain.model.web.icon.WebIcon
import kotlinx.coroutines.flow.MutableSharedFlow
import org.junit.jupiter.api.AfterEach
import org.junit.jupiter.api.BeforeEach
import org.junit.jupiter.api.Test

class WebHistoryViewKtTest {

    @RelaxedMockK
    private lateinit var viewModel: WebHistoryViewModel
    
    @BeforeEach
    fun setUp() {
        MockKAnnotations.init(this)
        
        mockkConstructor(WebIcon::class)
        every { anyConstructed<WebIcon>().readAll() } returns emptyList()
        
        coEvery { viewModel.launch(any()) } just Runs
        every { viewModel.onDispose(any()) } just Runs
        every { viewModel.listState() } returns LazyListState(0)
        every { viewModel.list() } returns mutableListOf(
            WebHistory("test item", "https://test.com/test"),
        )
        every { viewModel.openUrl(any(), any()) } just Runs
        every { viewModel.focusRequester() } returns FocusRequester()
    }

    @AfterEach
    fun tearDown() {
        unmockkAll()
    }

    @OptIn(ExperimentalTestApi::class)
    @Test
    fun webHistoryView() {
        val mutableSharedFlow = MutableSharedFlow<Float>(extraBufferCapacity = 1)
        every { viewModel.scrollEventFlow() } returns mutableSharedFlow

        runDesktopComposeUiTest {
            setContent {
                WebHistoryView(mockk(), viewModel)
            }

            val item = onNodeWithText("test item")
            item.performClick()
            verify { viewModel.openUrl(any(), false) }
            item.performMouseInput {
                longClick()
                enter()
                exit()
            }

            item.performKeyInput {
                pressKey(Key.DirectionUp, 1000L)
                pressKey(Key.DirectionDown, 1000L)
            }

            verify { viewModel.scrollEventFlow() }
            verify { viewModel.listState() }
            mutableSharedFlow.tryEmit(1f)
            mainClock.advanceTimeBy(500L)
        }
    }

    @OptIn(ExperimentalTestApi::class)
    @Test
    fun useDropdown() {
        every { viewModel.openingDropdown(any()) } returns true
        every { viewModel.browseUri(any()) } just Runs
        every { viewModel.clipText(any()) } just Runs
        every { viewModel.delete(any()) } just Runs
        every { viewModel.clear() } just Runs
        every { viewModel.closeDropdown() } just Runs
        every { viewModel.scrollEventFlow() } returns MutableSharedFlow(extraBufferCapacity = 1)

        runDesktopComposeUiTest {
            setContent {
                WebHistoryView(mockk(), viewModel)
            }

            onNode(hasText("Open"), true).onParent().performClick()
            verify { viewModel.openUrl(any(), any()) }

            onNode(hasText("Open background"), true).onParent().performClick()
            verify { viewModel.openUrl(any(), any()) }

            onNode(hasText("Open with browser"), true).onParent().performClick()
            verify { viewModel.browseUri(any()) }

            onNode(hasText("Copy title"), true).onParent().performClick()
            verify { viewModel.clipText(any()) }

            onNode(hasText("Copy URL"), true).onParent().performClick()
            verify { viewModel.clipText(any()) }

            onNode(hasText("Clip markdown link"), true).onParent().performClick()
            verify { viewModel.clipText(any()) }

            onNode(hasText("Delete"), true).onParent().performClick()
            verify { viewModel.delete(any()) }

            onNode(hasText("Clear"), true).onParent().performClick()
            verify { viewModel.clear() }
        }
    }

}